erDiagram
    USER ||--o{ WORKSPACE : "owns"
    USER ||--o{ WORKSPACE_MEMBER : "joins"
    USER ||--o{ WORKSPACE_INVITATION : "invited_by"
    WORKSPACE ||--o{ WORKSPACE_MEMBER : "has"
    WORKSPACE ||--o{ WORKSPACE_INVITATION : "issues"
    WORKSPACE ||--o{ PROJECT : "contains"
    WORKSPACE ||--o{ GITHUB_INSTALLATION : "links"
    PROJECT ||--o{ TASK : "contains"
    PROJECT ||--o{ LABEL : "has"
    PROJECT ||--o{ THREAD : "discusses"
    PROJECT ||--o{ WIKI : "documents"
    PROJECT ||--o{ MEDIA : "stores"
    PROJECT ||--o{ GITHUB_REPOSITORY : "links"
    TASK ||--o{ TASK_COMMENT : "has"
    TASK ||--o{ TASK_ATTACHMENT : "has"
    TASK }o--o{ LABEL : "tagged"
    TASK ||--o{ TASK_DEPENDENCY : "depends_on"
    TASK ||--|| TASK_DEPENDENCY : "blocks"
    TASK ||--o{ GITHUB_ISSUE : "syncs_to"
    TASK ||--o{ GITHUB_PULL_REQUEST : "references"
    TASK ||--o{ NOTIFICATION : "triggers"
    USER ||--o{ TASK_COMMENT : "writes"
    USER ||--o{ TASK_ATTACHMENT : "uploads"
    USER ||--o{ TASK : "assigned_to"
    USER ||--o{ THREAD : "starts"
    USER ||--o{ MEDIA : "uploads"
    USER ||--o{ REACTION : "reacts"
    USER ||--o{ NOTIFICATION : "receives"
    THREAD ||--o{ THREAD_REPLY : "contains"
    THREAD_REPLY ||--o{ THREAD_REPLY : "parent_of"
    THREAD ||--o{ REACTION : "receives"
    THREAD_REPLY ||--o{ REACTION : "receives"
    TASK ||--o{ REACTION : "receives"
    TASK_COMMENT ||--o{ REACTION : "receives"
    THREAD ||--o{ MEDIA : "attached_to"
    THREAD_REPLY ||--o{ MEDIA : "attached_to"
    GITHUB_INSTALLATION ||--o{ GITHUB_REPOSITORY : "scopes"
    GITHUB_REPOSITORY ||--o{ GITHUB_ISSUE : "tracks"
    GITHUB_REPOSITORY ||--o{ GITHUB_PULL_REQUEST : "tracks"
    GITHUB_REPOSITORY ||--o{ GITHUB_BRANCH : "tracks"